# indices_models_data_ville_ai

./: .gitignore  README.md  pyproject.toml  temp.txt
data/2021-census-boundaries-file/: README.md  clean_census_tract_boundaries.py  inspect_boundary.py
data/2021-census-division-boundary-file/: README.md
data/age_structure_2021/: README.md  clean_age_structure_2021.py
data/census_division_age_structure_2021/: README.md  clean_census_division_age_structure_2021.py  inspect_census_division_age_structure_2021.py
data/census_division_agriculture_2021/: DOWNLOAD.md  README.md  clean_census_division_agriculture_2021.py  inspect_census_division_agriculture_2021.py
data/census_division_business_establishments_2021/: DOWNLOAD.md  README.md  clean_census_division_business_establishments_2021.py  inspect_census_division_business_establishments_2021.py  inspect_census_division_business_establishments_business_count_2021.py
data/census_division_demographic_estimates_2021/: DOWNLOAD.md  README.md  (+2 more)
recipes/: dummy_index.yaml  schema_notes.md  sovi_like.yaml  sovi_like_quebec_cd_2021_38var.yaml  sovi_like_synthetic.yaml  svi_like.yaml  svi_quebec_2021.yaml  svi_quebec_2021_partial12.yaml
tests/: conftest.py  test_aggregation.py  test_dummy_index.py  test_factor_analysis.py  test_missing_data.py  test_normalization.py  test_orientation.py  test_outputs_metadata.py  test_ranking.py  test_recipe.py  test_sovi_like.py  test_svi_like.py  test_validation.py  test_varimax.py
transformation/: tt.py
urban_resilience_models/: README.md  lineage.md  model_family_manifest.md
(+487 files in other folders)
