[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ville-indices"
version = "0.1.0"
description = "Reusable composite-index benchmark framework for VILLE_IA / IVADO research."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
]

[project.scripts]
ville-indices = "ville_indices.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
